@@ -55,6 +55,10 @@ fi
 # Disable ZIP64 extra field validation for compatibility with older ZIP archives (b/545208070).
 exec ${TF_JAVA} $ADD_OPENS_FLAG $RDBG_FLAG ${TF_JVM_OPTIONS} -XX:+HeapDumpOnOutOfMemoryError \
   -XX:-OmitStackTraceInFastThrow -Djdk.xml.totalEntitySizeLimit=0 \
-  -Djdk.xml.entityExpansionLimit=10000 \
-  -Djdk.util.zip.disableZip64ExtraFieldValidation=true $TRADEFED_OPTS \
+  -Djdk.xml.maxGeneralEntitySizeLimit=0 \
+  -Djdk.xml.entityExpansionLimit=0 \
+  -Djdk.util.zip.disableZip64ExtraFieldValidation=true \
+  -XX:+IgnoreUnrecognizedVMOptions \
+  --sun-misc-unsafe-memory-access=allow \
+  --enable-native-access=ALL-UNNAMED $TRADEFED_OPTS \
   -cp "${TF_PATH}" -DTF_JAR_DIR=${TF_JAR_DIR} $CONSOLE_CLASS "$@"
